# plaything

./: .gitmodules  Makefile
application/: Config.in  external.desc  external.mk
application/board/rpi5/: Config.in  genimage.cfg  post-build.sh
application/board/rpi5/overlay/system/etc/init.d/: S05modules
application/board/rpi5/overlay/system/etc/network/: interfaces
application/configs/: custom_raspberrypi5_defconfig
application/package/qt-menu/: CMakeLists.txt  Config.in  S99qtmenu  installedGames.json  jsonDataReader.cpp  jsonDataReader.h  main.cpp  qt-menu.mk  qt-menu.pro  resource.qrc
application/package/qt-menu/installedGames/Assassin's Creed Shadows/: game_info.json
application/package/qt-menu/installedGames/DEATH STRANDING 2/: game_info.json
application/package/qt-menu/installedGames/Forza Horizon 5/: game_info.json
application/package/qt-menu/installedGames/Indiana Jones and the Great Circle/: game_info.json
application/package/qt-menu/installedGames/NBA 2K25/: game_info.json
application/package/qt-menu/qml/: Games.qml  Settings.qml  Store.qml  main.qml
